add new sections

--- a/src/partials/deal.html
+++ b/src/partials/deal.html
@@ -2,8 +2,7 @@
   <div class="container">
     <article class="deal__card deal-card">
       <h2 class="deal__title title">
-        Выполняем заказы на поиск автомобиля
-        <b>под ключ от 2 дней</b>
+        <span class="title title--regular">Выполняем заказы на поиск автомобиля</span> под ключ от 2 дней
       </h2>
       <div class="deal-card__inner">
         <div class="deal__left">
