--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,8 +1,6 @@
 <section class="hero">
   <div class="container hero__container">
-    <h1 class="title hero__title">
-      <b>Подберем автомобиль</b>
-      с гарантией технической и юридической чистоты
+    <h1 class="title hero__title">Подберем автомобиль <span class="title title--regular">с гарантией технической и юридической чистоты</span>
     </h1>
     <span class="hero__descr">
       Отберем
