--- a/src/partials/services.html
+++ b/src/partials/services.html
@@ -1,8 +1,8 @@
 <section class="services">
   <div class="container services__container">
-    <h2 class="title title--bold services__title">Наши услуги автоподбора</h2>
+    <h2 class="title services__title">Наши услуги автоподбора</h2>
     <div class="services__cards">
-      <div class="services__card services-card">
+      <div class="services__card services-card card">
         <img class="services-card__image" src="img/services-1.webp" alt="a man checks the paintwork to see if it has been repainted" />
         <h3 class="services-card__title">Подбор автомобиля с пробегом под ключ</h3>
         <ul class="list-reset services-card__list">
@@ -19,7 +19,7 @@
           <button class="btn-reset btn btn--small services-card__btn">Заказать</button>
         </div>
       </div>
-      <div class="services__card services-card">
+      <div class="services__card services-card card">
         <img class="services-card__image" src="img/services-2.webp" alt="a man checks the paintwork to see if it has been repainted" />
         <h3 class="services-card__title">Выездная диагностика автомобиля</h3>
         <ul class="list-reset services-card__list">
