--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,6 +9,8 @@
 @import "./components/hero";
 @import "./components/deal";
 @import "./components/services";
+@import "./components/instruction";
+@import "./components/check";
 
 @import "./components/footer";
 
