--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -111,12 +111,12 @@ a {
 
 .title {
   margin: 0;
-  font-weight: 400;
+  font-weight: 700;
   font-size: 50px;
   line-height: 67px;
 
-  &--bold {
-    font-weight: 700;
+  &--regular {
+    font-weight: 400;
   }
 }
 
@@ -136,4 +136,19 @@ a {
     font-size: 16px;
     line-height: 21px;
   }
+}
+
+.descr {
+  margin: 0;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.card {
+  max-width: 440px;
+  padding: 30px;
+  border-radius: 30px;
+  background-color: #fff;
+  box-shadow: 0px 30px 40px 0px rgba(0, 0, 0, 0.05);
 }
