--- a/src/scss/components/_services.scss
+++ b/src/scss/components/_services.scss
@@ -9,7 +9,7 @@
     top: -17px;
     bottom: 0;
     z-index: -1;
-    background-image: url("../img/services-bg.webp");
+    background-image: url("../img/bg/services-bg.webp");
     background-position: right top;
     background-repeat: no-repeat;
   }
@@ -21,14 +21,6 @@
 
   &__title {
     margin-bottom: 24px;
-  }
-
-  &__card {
-    max-width: 440px;
-    padding: 30px;
-    border-radius: 30px;
-    background-color: #fff;
-    box-shadow: 0px 30px 40px 0px rgba(0, 0, 0, 0.05);
   }
 
   &-card {
