finished desktop version

--- a/src/partials/check.html
+++ b/src/partials/check.html
@@ -1,3 +1,21 @@
 <section class="check">
-  
+  <div class="container">
+    <div class="check__content">
+      <div class="check__right">
+        <h2 class="title check__title">Проверьте объявление бесплатно</h2>
+        <p class="check__text">Получите бесплатный анализ объявления вместо того, чтобы сразу отдавать деньги возможным обманщикам</p>
+      </div>
+      <div class="check__card card">
+        <span class="check__subtitle">Проверить объявление</span>
+        <p class="check__descr">Мы проверим выбранное вами объявление о продаже автомобиля с пробегом на техническую и юридическую чистоту по 10 базам данных.</p>
+        <form class="check-form">
+          <input type="hidden" name="title" value="Проверьте объявление бесплатно">
+          <input class="check-form__input" type="text" id="adv-link" name="adv-link" placeholder="Ссылка на объявление">
+          <input class="check-form__input" type="text" id="name" name="name" placeholder="Ваше имя">
+          <input class="check-form__input" type="text" id="phone-num" name="phone-num" placeholder="Номер телефона">
+          <button class="btn-reset btn btn--small">Получить отчет</button>
+        </form>
+      </div>
+    </div>
+  </div>
 </section>
