--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,6 +11,8 @@
 @import "./components/services";
 @import "./components/instruction";
 @import "./components/check";
+@import "./components/video";
+@import "./components/contacts";
 
 @import "./components/footer";
 
