--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -129,12 +129,17 @@ a {
   font-size: 20px;
   line-height: 27px;
   background: linear-gradient(180.00deg, rgb(253, 234, 68), rgb(253, 179, 68) 100%);
+  transition: box-shadow .2s ease-in;
 
   &--small {
     padding: 0 32px;
     height: 60px;
     font-size: 16px;
     line-height: 21px;
+  }
+
+  &:hover {
+    box-shadow: inset 0px -8px 0px -4px rgba(0, 0, 0, 0.1), 0px 0px 40px 0px rgb(253, 179, 68);
   }
 }
 
@@ -151,4 +156,8 @@ a {
   border-radius: 30px;
   background-color: #fff;
   box-shadow: 0px 30px 40px 0px rgba(0, 0, 0, 0.05);
+
+  &--noshadow {
+    box-shadow: none;
+  }
 }
