--- a/src/scss/vendor.scss
+++ b/src/scss/vendor.scss
@@ -6,9 +6,6 @@
 
 @import "./vendor/carousel.thumbs";
 
-// @import "../../node_modules/@fancyapps/ui/dist/fancybox/fancybox.css";
-// @import "../../node_modules/@fancyapps/ui/dist/fancybox/carousel.css";
-
 // стили для модального окна
 // @import "../../node_modules/graph-modal/dist/graph-modal.min";
 
@@ -19,7 +16,7 @@
 // @import "../../node_modules/aos/dist/aos";
 
 // стили для свайпера
-// @import "../../node_modules/swiper/swiper-bundle.min";
+@import "../../node_modules/swiper/swiper-bundle.min";
 
 // стили для скролла simplebar
 // @import "../../node_modules/simplebar/dist/simplebar.min";
