header and hero adaptation

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,7 +3,7 @@
     <div class="header__info">
       <div class="header__logo-wrapper">
         <a class="header__logo-link" href="#">
-          <img class="header__logo" src="/img/logo.webp" alt="logo" />
+          <img class="header__logo" src="img/logo.webp" alt="logo" />
         </a>
         <div class="header__title-wrapper">
           <span class="header__title">Swan Auto</span>
@@ -21,7 +21,7 @@
         </a>
       </div>
     </div>
-    <div class="header__socials socials">
+    <div class="socials header__socials">
       <a class="socials__link socials__link--whatsapp" href="#"></a>
       <a class="socials__link socials__link--telegram" href="#"></a>
       <a class="socials__link socials__link--instagram" href="#"></a>
