--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,5 @@
 <section class="hero">
+  <img class="hero__bg" src="img/bg/car-bg.webp" alt="">
   <div class="container hero__container">
     <h1 class="title hero__title">Подберем автомобиль <span class="title title--regular">с гарантией технической и юридической чистоты</span>
     </h1>
