--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -118,6 +118,16 @@ a {
   &--regular {
     font-weight: 400;
   }
+
+  @include small-tablet {
+    font-size: 40px;
+    line-height: 50px;
+  }
+
+  @include mobile {
+    font-size: 30px;
+    line-height: 35px;
+  }
 }
 
 .btn {
@@ -140,6 +150,12 @@ a {
 
   &:hover {
     box-shadow: inset 0px -8px 0px -4px rgba(0, 0, 0, 0.1), 0px 0px 40px 0px rgb(253, 179, 68);
+  }
+
+  @include small-tablet {
+    padding: 0 32px;
+    height: 60px;
+    font-size: 16px;
   }
 }
 
