--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -3,7 +3,7 @@
   left: 0;
   top: 0;
   z-index: 2;
-  padding: 24px 0;
+  padding: var(--main-gap) 0;
   width: 100%;
   background-color: transparent;
 
@@ -16,15 +16,37 @@
   &__info {
     display: flex;
     gap: 97px;
+
+    @include minidesk {
+      gap: 40px;
+    }
+
+    @include small-tablet {
+      gap: 0;
+      justify-content: space-between;
+      flex-grow: 1;
+    }
   }
 
   &__logo {
     width: 72px;
     height: 72px;
 
+    &-link {
+      flex-shrink: 0;
+    }
     &-wrapper {
       display: flex;
       gap: 14px;
+
+      @include mobile {
+        gap: 8px;
+      }
+    }
+
+    @include mobile {
+      width: 40px;
+      height: 40px;
     }
   }
 
@@ -38,12 +60,22 @@
       flex-direction: column;
       justify-content: center;
     }
+
+    @include mobile {
+      font-size: 14px;
+      line-height: 20px;
+    }
   }
 
   &__descr {
     font-weight: 500;
     font-size: 12px;
     line-height: 16px;
+
+    @include mobile {
+      font-size: 8px;
+      line-height: 10px;
+    }
   }
 
   &__title,
@@ -73,6 +105,10 @@
       line-height: 21px;
       color: var(--color-mirage);
     }
+
+    @include minidesk {
+      display: none;
+    }
   }
 
   &__contacts {
@@ -91,6 +127,10 @@
       font-size: 16px;
       line-height: 21px;
       color: var(--yellow-orange);
+
+      @include mobile {
+        font-size: 8px;
+      }
     }
 
     &-link {
@@ -98,47 +138,19 @@
       flex-direction: column;
       align-items: end;
     }
+
+    @include mobile {
+      font-size: 14px;
+      line-height: 20px;
+    }
   }
 
   &__socials {
     justify-content: end;
-  }
-}
 
-.socials {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-
-  &__link {
-    display: inline-block;
-    width: 42px;
-    height: 42px;
-
-    &--whatsapp,
-    &--telegram,
-    &--instagram,
-    &--youtube {
-      background-position: center;
-      background-size: cover;
-      background-repeat: no-repeat;
-    }
-
-    &--whatsapp {
-      background-image: url('../img/icons/WhatsApp.svg');
-
-    }
-
-    &--telegram {
-      background-image: url('../img/icons/telegram.svg');
-    }
-
-    &--instagram {
-      background-image: url('../img/icons/instagram.svg');
-    }
-
-    &--youtube {
-      background-image: url('../img/icons/youtube.svg');
+    @include small-tablet {
+      display: none;
     }
   }
 }
+
