--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,6 +4,8 @@
 @import "fonts";
 @import "settings";
 
+// подключения маленьких компонентов
+@import "./components/socials";
 // подключения компонентов страницы
 @import "./components/header";
 @import "./components/hero";
@@ -16,5 +18,4 @@
 
 @import "./components/footer";
 
-// подключения маленьких компонентов
-// @import "./components/nav";
+
