--- a/src/scss/components/_check.scss
+++ b/src/scss/components/_check.scss
@@ -30,7 +30,7 @@
   }
 
   &__title {
-    margin-bottom: 24px;
+    margin-bottom: var(--main-gap);
   }
 
   &__text {
@@ -49,7 +49,7 @@
 
   &__descr {
     margin: 0;
-    margin-bottom: 24px;
+    margin-bottom: var(--main-gap);
     font-size: 15px;
     font-weight: 400;
     line-height: 20px;
@@ -76,7 +76,7 @@
     }
 
     &:nth-child(4) {
-      margin-bottom: 24px;
+      margin-bottom: var(--main-gap);
     }
 
     &:focus-visible {
