add an adaptive to the instruction section

--- a/src/partials/deal.html
+++ b/src/partials/deal.html
@@ -6,7 +6,7 @@
       </h2>
       <div class="deal-card__inner">
         <div class="deal__left">
-          <div class="f-carousel deal__carousel deal-carousel" id="myCarousel">
+          <div class="f-carousel deal__carousel deal-carousel" id="dealCarousel">
             <div class="f-carousel__viewport">
               <div class="f-carousel__track">
                 <div
