--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -119,14 +119,19 @@ a {
     font-weight: 400;
   }
 
-  @include small-tablet {
+  @include minidesk {
     font-size: 40px;
-    line-height: 50px;
+    line-height: 48px;
+  }
+
+  @include small-tablet {
+    font-size: 30px;
+    line-height: 35px;
   }
 
   @include mobile {
-    font-size: 30px;
-    line-height: 35px;
+    font-size: 24px;
+    line-height: 30px;
   }
 }
 
@@ -141,22 +146,31 @@ a {
   background: linear-gradient(180.00deg, rgb(253, 234, 68), rgb(253, 179, 68) 100%);
   transition: box-shadow .2s ease-in;
 
+  @include small-tablet {
+    padding: 0 32px;
+    height: 60px;
+    font-size: 16px;
+  }
+
   &--small {
     padding: 0 32px;
     height: 60px;
     font-size: 16px;
     line-height: 21px;
+
+    @include mobile {
+      padding: 0 25px;
+      height: 50px;
+      font-size: 14px;
+      line-height: 18px;
+    }
   }
 
   &:hover {
     box-shadow: inset 0px -8px 0px -4px rgba(0, 0, 0, 0.1), 0px 0px 40px 0px rgb(253, 179, 68);
   }
 
-  @include small-tablet {
-    padding: 0 32px;
-    height: 60px;
-    font-size: 16px;
-  }
+
 }
 
 .descr {
@@ -164,6 +178,11 @@ a {
   font-size: 18px;
   font-weight: 400;
   line-height: 24px;
+
+  @include tablet {
+    font-size: 16px;
+    line-height: 22px;
+  }
 }
 
 .card {
