--- a/src/scss/components/_services.scss
+++ b/src/scss/components/_services.scss
@@ -1,7 +1,12 @@
 .services {
   padding-bottom: 117px;
   position: relative;
-&::before {
+
+  @include tablet {
+    padding-bottom: 60px;
+  }
+
+  &::before {
     content: "";
     position: absolute;
     left: 0;
@@ -12,11 +17,20 @@
     background-image: url("../img/bg/services-bg.webp");
     background-position: right top;
     background-repeat: no-repeat;
+
+    @include minidesk {
+      background-image: none;
+    }
   }
 
   &__cards {
     display: flex;
     gap: 40px;
+
+    @include minidesk {
+      justify-content: center;
+      flex-wrap: wrap;
+    }
   }
 
   &__title {
@@ -37,11 +51,20 @@
       font-size: 24px;
       font-weight: 700;
       line-height: 32px;
+
+      @include mobile {
+        font-size: 20px;
+        line-height: 28px;
+      }
     }
 
     &__list {
       padding-left: 30px;
       margin-bottom: 22px;
+
+      @include mobile {
+        padding-left: 24px;
+      }
     }
 
     &__item {
@@ -65,6 +88,17 @@
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
+
+        @include mobile {
+          left: -24px;
+          width: 16px;
+          height: 16px;
+        }
+      }
+
+      @include mobile {
+        font-size: 14px;
+        line-height: 18px;
       }
     }
 
@@ -78,6 +112,11 @@
       display: block;
       font-size: 22px;
       line-height: 29px;
+
+      @include mobile {
+          font-size: 18px;
+          line-height: 24px;
+        }
     }
 
     &__text {
