--- a/src/partials/check.html
+++ b/src/partials/check.html
@@ -5,6 +5,7 @@
         <h2 class="title check__title">Проверьте объявление бесплатно</h2>
         <p class="check__text">Получите бесплатный анализ объявления вместо того, чтобы сразу отдавать деньги возможным обманщикам</p>
       </div>
+      <img class="check__image" src="img/bg/check-bg.webp" alt="">
       <div class="check__card card">
         <span class="check__subtitle">Проверить объявление</span>
         <p class="check__descr">Мы проверим выбранное вами объявление о продаже автомобиля с пробегом на техническую и юридическую чистоту по 10 базам данных.</p>
