--- a/src/scss/components/_check.scss
+++ b/src/scss/components/_check.scss
@@ -1,12 +1,19 @@
 .check {
   padding: 120px 0;
 
+  @include tablet {
+    padding: 60px 0;
+  }
+
   &__content {
     position: relative;
     display: flex;
     align-items: center;
     justify-content: space-between;
 
+    @include tablet {
+      flex-direction: column;
+    }
 
     &::before {
       content: '';
@@ -21,16 +28,35 @@
       background-size: cover;
       background-repeat: no-repeat;
       z-index: -1;
-    }
 
+      @include tablet {
+        background-image: none;
+      }
+    }
+  }
+
+  &__image {
+    display: none;
+
+    @include tablet {
+      display: block;
+    }
   }
 
   &__right {
     max-width: 330px;
+
+    @include tablet {
+      max-width: 700px;
+    }
   }
 
   &__title {
     margin-bottom: var(--main-gap);
+
+    @include tablet {
+      text-align: center;
+    }
   }
 
   &__text {
@@ -38,6 +64,21 @@
     font-size: 18px;
     font-weight: 400;
     line-height: 24px;
+
+    @include tablet {
+      text-align: center;
+    }
+  }
+
+  &__card {
+
+    @include tablet {
+      max-width: 700px;
+    }
+
+    @include mobile {
+      padding: 15px;
+    }
   }
 
   &__subtitle {
