--- a/src/partials/video.html
+++ b/src/partials/video.html
@@ -18,8 +18,8 @@
           <!-- Slides -->
           <div class="swiper-slide video__slide">
             <iframe
-              width="300"
-              height="504"
+              width="350"
+              height="570"
               src="https://www.youtube.com/embed/ARnu5rLkLSw"
               title="macOS or Linux? 🤔 #Shorts"
               frameborder="0"
@@ -28,8 +28,8 @@
           </div>
           <div class="swiper-slide video__slide">
             <iframe
-              width="300"
-              height="504"
+              width="350"
+              height="570"
               src="https://www.youtube.com/embed/5789U8zphQ0"
               title="Btw I use Arch Linux."
               frameborder="0"
@@ -38,8 +38,8 @@
           </div>
           <div class="swiper-slide video__slide">
             <iframe
-              width="300"
-              height="504"
+             width="350"
+              height="570""
               src="https://www.youtube.com/embed/KwumF1jmWAw"
               title="Linux VS Mac VS Windows 🫣 #coding #programming #computerscience #shorts"
               frameborder="0"
@@ -48,8 +48,8 @@
           </div>
           <div class="swiper-slide video__slide">
             <iframe
-              width="300"
-              height="504"
+              width="350"
+              height="570"
               src="https://www.youtube.com/embed/ARnu5rLkLSw"
               title="macOS or Linux? 🤔 #Shorts"
               frameborder="0"
@@ -58,8 +58,8 @@
           </div>
           <div class="swiper-slide video__slide">
             <iframe
-              width="300"
-              height="504"
+              width="350"
+              height="570"
               src="https://www.youtube.com/embed/ARnu5rLkLSw"
               title="macOS or Linux? 🤔 #Shorts"
               frameborder="0"
