--- a/src/scss/components/_contacts.scss
+++ b/src/scss/components/_contacts.scss
@@ -1,5 +1,6 @@
 .contacts {
-    position: relative;
+  position: relative;
+
   &__card {
     width: 440px;
     position: absolute;
@@ -7,6 +8,20 @@
     top: 50%;
     transform: translateY(-50%);
     z-index: 2;
+
+    @include middesk {
+      left: 50px;
+    }
+
+    @include tablet {
+      position: relative;
+      transform: none;
+      left: 0;
+    }
+
+    @include mobile {
+      padding: 15px;
+    }
   }
 
   &__title {
@@ -14,6 +29,20 @@
     font-size: 40px;
     font-weight: 700;
     line-height: 53px;
+
+    @include small-tablet {
+      font-size: 30px;
+      line-height: 35px;
+    }
+
+    @include mobile {
+      font-size: 24px;
+      line-height: 30px;
+    }
+  }
+
+  &__link {
+    color: inherit;
   }
 
   &__subtitle,
@@ -21,6 +50,11 @@
     display: block;
     font-size: 16px;
     line-height: 21px;
+
+    @include mobile {
+      font-size: 14px;
+      line-height: 18px;
+    }
   }
 
   &__subtitle {
@@ -33,8 +67,16 @@
     font-weight: 700;
   }
 
-  &__map {
+  &__map>iframe {
     width: 100%;
     height: 760px;
+
+    @include tablet {
+      height: 500px;
+    }
+
+    @include mobile {
+      height: 300px;
+    }
   }
 }
