--- a/src/partials/check.html
+++ b/src/partials/check.html
@@ -9,11 +9,11 @@
       <div class="check__card card">
         <span class="check__subtitle">Проверить объявление</span>
         <p class="check__descr">Мы проверим выбранное вами объявление о продаже автомобиля с пробегом на техническую и юридическую чистоту по 10 базам данных.</p>
-        <form class="check-form">
+        <form class="call-form">
           <input type="hidden" name="title" value="Проверьте объявление бесплатно">
-          <input class="check-form__input" type="text" id="adv-link" name="adv-link" placeholder="Ссылка на объявление">
-          <input class="check-form__input" type="text" id="name" name="name" placeholder="Ваше имя">
-          <input class="check-form__input" type="text" id="phone-num" name="phone-num" placeholder="Номер телефона">
+          <input class="call-form__input" type="text" id="adv-link" name="adv-link" placeholder="Ссылка на объявление">
+          <input class="call-form__input" type="text" id="name" name="name" placeholder="Ваше имя">
+          <input class="call-form__input" type="text" id="phone-num" name="phone-num" placeholder="Номер телефона">
           <button class="btn-reset btn btn--small">Получить отчет</button>
         </form>
       </div>
