--- a/src/partials/services.html
+++ b/src/partials/services.html
@@ -16,7 +16,7 @@
             <span class="services-card__text">Цена:</span>
             <span class="services-card__price">от 50 000 руб.</span>
           </div>
-          <button class="btn-reset btn btn--small services-card__btn">Заказать</button>
+          <button class="btn-reset btn btn--small services-card__btn _modal-open" data-modal-open="modal-call">Заказать</button>
         </div>
       </div>
       <div class="services__card services-card card">
@@ -33,7 +33,7 @@
             <span class="services-card__text">Цена:</span>
             <span class="services-card__price">от 5 000 руб.</span>
           </div>
-          <button class="btn-reset btn btn--small services-card__btn">Заказать</button>
+          <button class="btn-reset btn btn--small services-card__btn _modal-open" data-modal-open="modal-call">Заказать</button>
         </div>
       </div>
     </div>
