--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,6 +6,8 @@
 
 // подключения маленьких компонентов
 @import "./components/socials";
+@import "./components/call-form";
+@import "./components/modal";
 // подключения компонентов страницы
 @import "./components/header";
 @import "./components/hero";
