--- a/src/scss/components/_deal.scss
+++ b/src/scss/components/_deal.scss
@@ -212,6 +212,10 @@
   padding: 20px 30px;
   background: linear-gradient(180.00deg, rgb(253, 234, 68), rgb(253, 179, 68) 100%);
 
+  @include small-mobile {
+    padding: 15px 20px;
+  }
+
   &__left {
     display: flex;
     flex-direction: column;
@@ -238,10 +242,10 @@
       color: #fb2a2a;
     }
 
-    // @include tablet {
-    //   font-size: 16px;
-    //   line-height: 20px;
-    // }
+    @include small-mobile {
+      font-size: 18px;
+      line-height: 20px;
+    }
   }
 
   &__text {
@@ -249,15 +253,11 @@
     font-weight: 400;
     line-height: 24px;
 
-    // @include tablet {
-    //   font-size: 14px;
-    //   line-height: 18px;
-    // }
+    @include small-mobile {
+      font-size: 16px;
+      line-height: 20px;
+    }
   }
-
-  // @include tablet {
-  //   padding: 10px 15px;
-  // }
 
   @include tablet {
     flex-direction: column;
