--- a/src/scss/components/_video.scss
+++ b/src/scss/components/_video.scss
@@ -25,12 +25,27 @@
     border-radius: 20px;
     max-width: 308px;
     max-height: 550px;
+
+    @include mobile {
+      max-width: 270px;
+      max-height: 481px;
+    }
+
+    @include small-mobile {
+      max-width: 250px;
+      max-height: 448px;
+    }
   }
 
   &__arrow-prev,
   &__arrow-next {
     width: 22px;
     height: 14px;
+
+    @include small-tablet {
+        width: 16px;
+        height: 11px;
+      }
   }
 
   &__arrow-next {
@@ -56,6 +71,11 @@
     /* Linear */
     background: linear-gradient(180.00deg, rgb(253, 234, 68), rgb(253, 179, 68) 100%);
 
+    @include small-tablet {
+      width: 40px;
+      height: 40px;
+    }
+
     &.swiper-button-disabled {
       opacity: 0.5;
     }
@@ -67,6 +87,10 @@
 
   &-prev {
     left: -10px;
+
+    @include mobile {
+
+    }
   }
 
   &-next {
