change contacts section to footer

--- a/src/partials/video.html
+++ b/src/partials/video.html
@@ -19,7 +19,7 @@
           <div class="swiper-slide video__slide">
             <iframe
               width="350"
-              height="570"
+              height="57x0"
               src="https://www.youtube.com/embed/ARnu5rLkLSw"
               title="macOS or Linux? 🤔 #Shorts"
               frameborder="0"
