--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,3 +1,25 @@
 <footer class="footer">
+  <div class="footer__card card card--noshadow">
+    <h2 class="footer__title">Контакты</h2>
+    <span class="footer__subtitle">Офис:</span>
+    <span class="footer__descr">г. Москва, Волоколамское шоссе, д.100</span>
+    <span class="footer__subtitle">График работы:</span>
+    <span class="footer__subtitle">Телефон:</span>
+    <span class="footer__descr"><a class="footer__link" href="tel:+79258881916">+7 (925) 888-19-16</a></span>
+    <span class="footer__subtitle">Мессенджеры и соц. сети:</span>
+    <div class="footer__socials socials">
+      <a class="socials__link socials__link--whatsapp" href="#"></a>
+      <a class="socials__link socials__link--telegram" href="#"></a>
+      <a class="socials__link socials__link--instagram" href="#"></a>
+      <a class="socials__link socials__link--youtube" href="#"></a>
+    </div>
+  </div>
+  <div class="footer__map">
+    <iframe
+      src="https://yandex.ru/map-widget/v1/?scroll=false&um=constructor%3A3d33f21ba4b3ca38357d4179749c633944411a8d02bb116b3cfdfc437bb21474&amp;source=constructor"
+      width="100%"
+      height="720"
+      frameborder="0"></iframe>
+  </div>
 
 </footer>
